--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="view-transition" content="some-origin" />
 		<title>{title}</title>
 	</head>
 	<body class="bg-slate-500">
@@ -22,6 +23,25 @@ const { title } = Astro.props;
 		</main>
 	</body>
 </html>
+<script>
+	window.navigation.addEventListener('navigate', (event)=> {
+		const toUrl = new URL(event.destination.url);
+		if(location.origin !== toUrl.origin) return;
+
+		event.intercept({
+			async handler() {
+				const response = await fetch(toUrl.pathname);
+				const text = await response.text();
+				const  data = text.match(/<body[^>]*>([\s\S]*)<\/body>/i)![1];
+				
+				document.startViewTransition(() => {
+					document.body.innerHTML = data;
+					document.documentElement.scrollTop = 0;
+				})
+			}
+		})
+	})
+</script>
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
