--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,30 +17,15 @@ const { title } = Astro.props;
 		<meta name="view-transition" content="some-origin" />
 		<title>{title}</title>
 	</head>
-	<body class="bg-slate-500">
+	<body>
 		<main class="m-auto max-w-4xl bg-white shadow-xl rounded p-2 mt-2">
 			<slot />
 		</main>
 	</body>
 </html>
 <script>
-	window.navigation.addEventListener('navigate', (event)=> {
-		const toUrl = new URL(event.destination.url);
-		if(location.origin !== toUrl.origin) return;
-
-		event.intercept({
-			async handler() {
-				const response = await fetch(toUrl.pathname);
-				const text = await response.text();
-				const  data = text.match(/<body[^>]*>([\s\S]*)<\/body>/i)![1];
-				
-				document.startViewTransition(() => {
-					document.body.innerHTML = data;
-					document.documentElement.scrollTop = 0;
-				})
-			}
-		})
-	})
+	import {navigation} from "../utils/navegation";
+	navigation();
 </script>
 <style is:global>
 	:root {
@@ -49,7 +34,10 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+	}
+	body{
+		--tw-bg-opacity: 1;
+    	background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
