--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -25,7 +25,7 @@ const { slug, title, img, description, author } = Astro.props;
       </a>
       <div class="flex flex-col gap-4">
         <picture>
-          <img class="aspect-[389/500] h-full object-cover w-full rounded" 
+          <img class="aspect-[389/500] h-full object-cover w-full rounded border-gray-600 border-2" 
                 src={img} alt=`Portada de ${title}`
                 style={`view-transition-name: book-${slug}`}>
         </picture>
